org.openbel.framework.common/src/main/java/org/openbel/framework/common/bel/parser/BELScriptParser.java
/**
 *  Copyright 2013 OpenBEL Consortium
 *
 *  Licensed under the Apache License, Version 2.0 (the "License");
 *  you may not use this file except in compliance with the License.
 *  You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 *  Unless required by applicable law or agreed to in writing, software
 *  distributed under the License is distributed on an "AS IS" BASIS,
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *  See the License for the specific language governing permissions and
 *  limitations under the License.
 */
// $ANTLR 3.4 BELScript.g 2012-06-27 17:18:02

package org.openbel.framework.common.bel.parser;

import java.util.ArrayList;
import java.util.List;
import java.util.Stack;

import org.antlr.runtime.*;
import org.antlr.runtime.tree.CommonTreeAdaptor;
import org.antlr.runtime.tree.TreeAdaptor;
import org.openbel.bel.model.BELParseErrorException;

@SuppressWarnings({ "unused" })
public class BELScriptParser extends Parser {
    public static final String[] tokenNames = new String[] {
            "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CLOSE_PAREN", "COMMA",
            "DIGIT", "DOCUMENT_COMMENT", "DOCUMENT_KEYWORD", "EscapeSequence",
            "HexDigit", "IDENT_LIST", "LETTER", "NEWLINE", "NS_PREFIX",
            "OBJECT_IDENT", "OPEN_PAREN", "OctalEscape", "QUOTED_VALUE",
            "STATEMENT_COMMENT", "STATEMENT_GROUP_KEYWORD", "UnicodeEscape",
            "VALUE_LIST", "WS", "','", "'--'", "'->'", "'-|'", "':>'", "'='",
            "'=>'", "'=|'", "'>>'", "'ANNOTATION'", "'AS'", "'Authors'",
            "'ContactInfo'", "'Copyright'", "'DEFAULT'", "'DEFINE'",
            "'Description'", "'Disclaimer'", "'LIST'", "'Licenses'",
            "'NAMESPACE'", "'Name'", "'PATTERN'", "'SET'", "'UNSET'", "'URL'",
            "'Version'", "'a'", "'abundance'", "'act'", "'analogous'",
            "'association'", "'biologicalProcess'", "'biomarkerFor'", "'bp'",
            "'cat'", "'catalyticActivity'", "'causesNoChange'",
            "'cellSecretion'", "'cellSurfaceExpression'", "'chap'",
            "'chaperoneActivity'", "'complex'", "'complexAbundance'",
            "'composite'", "'compositeAbundance'", "'decreases'", "'deg'",
            "'degradation'", "'directlyDecreases'", "'directlyIncreases'",
            "'fus'", "'fusion'", "'g'", "'geneAbundance'", "'gtp'",
            "'gtpBoundActivity'", "'hasComponent'", "'hasComponents'",
            "'hasMember'", "'hasMembers'", "'increases'", "'isA'", "'kin'",
            "'kinaseActivity'", "'list'", "'m'", "'microRNAAbundance'",
            "'molecularActivity'", "'negativeCorrelation'", "'orthologous'",
            "'p'", "'path'", "'pathology'", "'pep'", "'peptidaseActivity'",
            "'phos'", "'phosphataseActivity'", "'pmod'",
            "'positiveCorrelation'", "'products'", "'prognosticBiomarkerFor'",
            "'proteinAbundance'", "'proteinModification'", "'r'",
            "'rateLimitingStepOf'", "'reactants'", "'reaction'", "'ribo'",
            "'ribosylationActivity'", "'rnaAbundance'", "'rxn'", "'sec'",
            "'sub'", "'subProcessOf'", "'substitution'", "'surf'", "'tloc'",
            "'tport'", "'transcribedTo'", "'transcriptionalActivity'",
            "'translatedTo'", "'translocation'", "'transportActivity'",
            "'trunc'", "'truncation'", "'tscript'"
    };

    public static final int EOF = -1;
    public static final int T__24 = 24;
    public static final int T__25 = 25;
    public static final int T__26 = 26;
    public static final int T__27 = 27;
    public static final int T__28 = 28;
    public static final int T__29 = 29;
    public static final int T__30 = 30;
    public static final int T__31 = 31;
    public static final int T__32 = 32;
    public static final int T__33 = 33;
    public static final int T__34 = 34;
    public static final int T__35 = 35;
    public static final int T__36 = 36;
    public static final int T__37 = 37;
    public static final int T__38 = 38;
    public static final int T__39 = 39;
    public static final int T__40 = 40;
    public static final int T__41 = 41;
    public static final int T__42 = 42;
    public static final int T__43 = 43;
    public static final int T__44 = 44;
    public static final int T__45 = 45;
    public static final int T__46 = 46;
    public static final int T__47 = 47;
    public static final int T__48 = 48;
    public static final int T__49 = 49;
    public static final int T__50 = 50;
    public static final int T__51 = 51;
    public static final int T__52 = 52;
    public static final int T__53 = 53;
    public static final int T__54 = 54;
    public static final int T__55 = 55;
    public static final int T__56 = 56;
    public static final int T__57 = 57;
    public static final int T__58 = 58;
    public static final int T__59 = 59;
    public static final int T__60 = 60;
    public static final int T__61 = 61;
    public static final int T__62 = 62;
    public static final int T__63 = 63;
    public static final int T__64 = 64;
    public static final int T__65 = 65;
    public static final int T__66 = 66;
    public static final int T__67 = 67;
    public static final int T__68 = 68;
    public static final int T__69 = 69;
    public static final int T__70 = 70;
    public static final int T__71 = 71;
    public static final int T__72 = 72;
    public static final int T__73 = 73;
    public static final int T__74 = 74;
    public static final int T__75 = 75;
    public static final int T__76 = 76;
    public static final int T__77 = 77;
    public static final int T__78 = 78;
    public static final int T__79 = 79;
    public static final int T__80 = 80;
    public static final int T__81 = 81;
    public static final int T__82 = 82;
    public static final int T__83 = 83;
    public static final int T__84 = 84;
    public static final int T__85 = 85;
    public static final int T__86 = 86;
    public static final int T__87 = 87;
    public static final int T__88 = 88;
    public static final int T__89 = 89;
    public static final int T__90 = 90;
    public static final int T__91 = 91;
    public static final int T__92 = 92;
    public static final int T__93 = 93;
    public static final int T__94 = 94;
    public static final int T__95 = 95;
    public static final int T__96 = 96;
    public static final int T__97 = 97;
    public static final int T__98 = 98;
    public static final int T__99 = 99;
    public static final int T__100 = 100;
    public static final int T__101 = 101;
    public static final int T__102 = 102;
    public static final int T__103 = 103;
    public static final int T__104 = 104;
    public static final int T__105 = 105;
    public static final int T__106 = 106;
    public static final int T__107 = 107;
    public static final int T__108 = 108;
    public static final int T__109 = 109;
    public static final int T__110 = 110;
    public static final int T__111 = 111;
    public static final int T__112 = 112;
    public static final int T__113 = 113;
    public static final int T__114 = 114;
    public static final int T__115 = 115;
    public static final int T__116 = 116;
    public static final int T__117 = 117;
    public static final int T__118 = 118;
    public static final int T__119 = 119;
    public static final int T__120 = 120;
    public static final int T__121 = 121;
    public static final int T__122 = 122;
    public static final int T__123 = 123;
    public static final int T__124 = 124;
    public static final int T__125 = 125;
    public static final int T__126 = 126;
    public static final int T__127 = 127;
    public static final int T__128 = 128;
    public static final int T__129 = 129;
    public static final int T__130 = 130;
    public static final int CLOSE_PAREN = 4;
    public static final int COMMA = 5;
    public static final int DIGIT = 6;
    public static final int DOCUMENT_COMMENT = 7;
    public static final int DOCUMENT_KEYWORD = 8;
    public static final int EscapeSequence = 9;
    public static final int HexDigit = 10;
    public static final int IDENT_LIST = 11;
    public static final int LETTER = 12;
    public static final int NEWLINE = 13;
    public static final int NS_PREFIX = 14;
    public static final int OBJECT_IDENT = 15;
    public static final int OPEN_PAREN = 16;
    public static final int OctalEscape = 17;
    public static final int QUOTED_VALUE = 18;
    public static final int STATEMENT_COMMENT = 19;
    public static final int STATEMENT_GROUP_KEYWORD = 20;
    public static final int UnicodeEscape = 21;
    public static final int VALUE_LIST = 22;
    public static final int WS = 23;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators

    public BELScriptParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public BELScriptParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }

    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    @Override
    public String[] getTokenNames() {
        return BELScriptParser.tokenNames;
    }

    @Override
    public String getGrammarFileName() {
        return "BELScript.g";
    }

    private final List<BELParseErrorException> syntaxErrors =
            new ArrayList<BELParseErrorException>();
    private final Stack<String> paraphrases = new Stack<String>();

    public List<BELParseErrorException> getSyntaxErrors() {
        return syntaxErrors;
    }

    @Override
    public void emitErrorMessage(String msg) {
    }

    @Override
    public void displayRecognitionError(String[] tokenNames,
            RecognitionException e) {
        String context = "";
        if (paraphrases.size() > 0) {
            context = paraphrases.peek();
        }
        syntaxErrors.add(new BELParseErrorException.SyntaxException(e.line,
                e.charPositionInLine, context, e));
    }

    public static class document_return extends ParserRuleReturnScope {
        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    }

    // $ANTLR start "document"
    // BELScript.g:44:1: document : ( NEWLINE | DOCUMENT_COMMENT | record )+ EOF ;
    public final BELScriptParser.document_return document()
            throws RecognitionException {
        BELScriptParser.document_return retval =
                new BELScriptParser.document_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token NEWLINE1 = null;
        Token DOCUMENT_COMMENT2 = null;
        Token EOF4 = null;
        BELScriptParser.record_return record3 = null;

        Object NEWLINE1_tree = null;
        Object DOCUMENT_COMMENT2_tree = null;
        Object EOF4_tree = null;

        try {
            // BELScript.g:44:9: ( ( NEWLINE | DOCUMENT_COMMENT | record )+ EOF )
            // BELScript.g:45:5: ( NEWLINE | DOCUMENT_COMMENT | record )+ EOF
            {
                root_0 = adaptor.nil();

                // BELScript.g:45:5: ( NEWLINE | DOCUMENT_COMMENT | record )+
                int cnt1 = 0;
                loop1: do {
                    int alt1 = 4;
                    switch (input.LA(1)) {
                    case NEWLINE: {
                        alt1 = 1;
                    }
                        break;
                    case DOCUMENT_COMMENT: {
                        alt1 = 2;
                    }
                        break;
                    case 39:
                    case 47:
                    case 48:
                    case 51:
                    case 52:
                    case 53:
                    case 56:
                    case 58:
                    case 59:
                    case 60:
                    case 62:
                    case 63:
                    case 64:
                    case 65:
                    case 66:
                    case 67:
                    case 68:
                    case 69:
                    case 71:
                    case 72:
                    case 75:
                    case 76:
                    case 77:
                    case 78:
                    case 79:
                    case 80:
                    case 87:
                    case 88:
                    case 89:
                    case 90:
                    case 91:
                    case 92:
                    case 95:
                    case 96:
                    case 97:
                    case 98:
                    case 99:
                    case 100:
                    case 101:
                    case 102:
                    case 104:
                    case 106:
                    case 107:
                    case 108:
                    case 110:
                    case 111:
                    case 112:
                    case 113:
                    case 114:
                    case 115:
                    case 116:
                    case 117:
                    case 119:
                    case 120:
                    case 121:
                    case 122:
                    case 124:
                    case 126:
                    case 127:
                    case 128:
                    case 129:
                    case 130: {
                        alt1 = 3;
                    }
                        break;

                    }

                    switch (alt1) {
                    case 1:
                    // BELScript.g:45:6: NEWLINE
                    {
                        NEWLINE1 =
                                (Token) match(input, NEWLINE,
                                        FOLLOW_NEWLINE_in_document62);
                        NEWLINE1_tree =
                                adaptor.create(NEWLINE1);
                        adaptor.addChild(root_0, NEWLINE1_tree);

                    }
                        break;
                    case 2:
                    // BELScript.g:45:16: DOCUMENT_COMMENT
                    {
                        DOCUMENT_COMMENT2 =
                                (Token) match(input, DOCUMENT_COMMENT,
                                        FOLLOW_DOCUMENT_COMMENT_in_document66);
                        DOCUMENT_COMMENT2_tree =
                                 adaptor.create(DOCUMENT_COMMENT2);
                        adaptor.addChild(root_0, DOCUMENT_COMMENT2_tree);

                    }
                        break;
                    case 3:
                    // BELScript.g:45:35: record
                    {
                        pushFollow(FOLLOW_record_in_document70);
                        record3 = record();

                        state._fsp--;

                        adaptor.addChild(root_0, record3.getTree());

                    }
                        break;

                    default:
                        if (cnt1 >= 1) break loop1;
                        EarlyExitException eee =
                                new EarlyExitException(1, input);
                        throw eee;
                    }
                    cnt1++;
                } while (true);

                EOF4 = (Token) match(input, EOF, FOLLOW_EOF_in_document74);
                EOF4_tree =
                         adaptor.create(EOF4);
                adaptor.addChild(root_0, EOF4_tree);

            }

            retval.stop = input.LT(-1);

            retval.tree =  adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree =
                     adaptor.errorNode(input, retval.start,
                            input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR end "document"

    public static class record_return extends ParserRuleReturnScope {
        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    }

    // $ANTLR start "record"
    // BELScript.g:48:1: record : ( define_namespace | define_annotation | set_annotation | set_document | set_statement_group | unset_statement_group | unset | statement ) ;
    public final BELScriptParser.record_return record()
            throws RecognitionException {
        BELScriptParser.record_return retval =
                new BELScriptParser.record_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        BELScriptParser.define_namespace_return define_namespace5 = null;

        BELScriptParser.define_annotation_return define_annotation6 = null;

        BELScriptParser.set_annotation_return set_annotation7 = null;

        BELScriptParser.set_document_return set_document8 = null;

        BELScriptParser.set_statement_group_return set_statement_group9 = null;

        BELScriptParser.unset_statement_group_return unset_statement_group10 =
                null;

        BELScriptParser.unset_return unset11 = null;

        BELScriptParser.statement_return statement12 = null;

        try {
            // BELScript.g:48:7: ( ( define_namespace | define_annotation | set_annotation | set_document | set_statement_group | unset_statement_group | unset | statement ) )
            // BELScript.g:49:5: ( define_namespace | define_annotation | set_annotation | set_document | set_statement_group | unset_statement_group | unset | statement )
            {
                root_0 =  adaptor.nil();

                // BELScript.g:49:5: ( define_namespace | define_annotation | set_annotation | set_document | set_statement_group | unset_statement_group | unset | statement )
                int alt2 = 8;
                switch (input.LA(1)) {
                case 39: {
                    int LA2_1 = input.LA(2);

                    if ((LA2_1 == 33)) {
                        alt2 = 2;
                    }
                    else if ((LA2_1 == 38 || LA2_1 == 44)) {
                        alt2 = 1;
                    }
                    else {
                        NoViableAltException nvae =
                                new NoViableAltException("", 2, 1, input);

                        throw nvae;

                    }
                }
                    break;
                case 47: {
                    switch (input.LA(2)) {
                    case OBJECT_IDENT: {
                        alt2 = 3;
                    }
                        break;
                    case DOCUMENT_KEYWORD: {
                        alt2 = 4;
                    }
                        break;
                    case STATEMENT_GROUP_KEYWORD: {
                        alt2 = 5;
                    }
                        break;
                    default:
                        NoViableAltException nvae =
                                new NoViableAltException("", 2, 2, input);

                        throw nvae;

                    }

                }
                    break;
                case 48: {
                    int LA2_3 = input.LA(2);

                    if ((LA2_3 == STATEMENT_GROUP_KEYWORD)) {
                        alt2 = 6;
                    }
                    else if ((LA2_3 == IDENT_LIST || LA2_3 == OBJECT_IDENT)) {
                        alt2 = 7;
                    }
                    else {
                        NoViableAltException nvae =
                                new NoViableAltException("", 2, 3, input);

                        throw nvae;

                    }
                }
                    break;
                case 51:
                case 52:
                case 53:
                case 56:
                case 58:
                case 59:
                case 60:
                case 62:
                case 63:
                case 64:
                case 65:
                case 66:
                case 67:
                case 68:
                case 69:
                case 71:
                case 72:
                case 75:
                case 76:
                case 77:
                case 78:
                case 79:
                case 80:
                case 87:
                case 88:
                case 89:
                case 90:
                case 91:
                case 92:
                case 95:
                case 96:
                case 97:
                case 98:
                case 99:
                case 100:
                case 101:
                case 102:
                case 104:
                case 106:
                case 107:
                case 108:
                case 110:
                case 111:
                case 112:
                case 113:
                case 114:
                case 115:
                case 116:
                case 117:
                case 119:
                case 120:
                case 121:
                case 122:
                case 124:
                case 126:
                case 127:
                case 128:
                case 129:
                case 130: {
                    alt2 = 8;
                }
                    break;
                default:
                    NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                    throw nvae;

                }

                switch (alt2) {
                case 1:
                // BELScript.g:49:6: define_namespace
                {
                    pushFollow(FOLLOW_define_namespace_in_record91);
                    define_namespace5 = define_namespace();

                    state._fsp--;

                    adaptor.addChild(root_0, define_namespace5.getTree());

                }
                    break;
                case 2:
                // BELScript.g:49:25: define_annotation
                {
                    pushFollow(FOLLOW_define_annotation_in_record95);
                    define_annotation6 = define_annotation();

                    state._fsp--;

                    adaptor.addChild(root_0, define_annotation6.getTree());

                }
                    break;
                case 3:
                // BELScript.g:49:45: set_annotation
                {
                    pushFollow(FOLLOW_set_annotation_in_record99);
                    set_annotation7 = set_annotation();

                    state._fsp--;

                    adaptor.addChild(root_0, set_annotation7.getTree());

                }
                    break;
                case 4:
                // BELScript.g:49:62: set_document
                {
                    pushFollow(FOLLOW_set_document_in_record103);
                    set_document8 = set_document();

                    state._fsp--;

                    adaptor.addChild(root_0, set_document8.getTree());

                }
                    break;
                case 5:
                // BELScript.g:49:77: set_statement_group
                {
                    pushFollow(FOLLOW_set_statement_group_in_record107);
                    set_statement_group9 = set_statement_group();

                    state._fsp--;

                    adaptor.addChild(root_0, set_statement_group9.getTree());

                }
                    break;
                case 6:
                // BELScript.g:49:99: unset_statement_group
                {
                    pushFollow(FOLLOW_unset_statement_group_in_record111);
                    unset_statement_group10 = unset_statement_group();

                    state._fsp--;

                    adaptor.addChild(root_0, unset_statement_group10.getTree());

                }
                    break;
                case 7:
                // BELScript.g:49:123: unset
                {
                    pushFollow(FOLLOW_unset_in_record115);
                    unset11 = unset();

                    state._fsp--;

                    adaptor.addChild(root_0, unset11.getTree());

                }
                    break;
                case 8:
                // BELScript.g:49:131: statement
                {
                    pushFollow(FOLLOW_statement_in_record119);
                    statement12 = statement();

                    state._fsp--;

                    adaptor.addChild(root_0, statement12.getTree());

                }
                    break;

                }

            }

            retval.stop = input.LT(-1);

            retval.tree =  adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        } catch (RecognitionException re) {
            reportError(re);
            recover(input, re);
            retval.tree =
                     adaptor.errorNode(input, retval.start,
                            input.LT(-1), re);

        }

        finally {
            // do for sure before leaving
        }
        return retval;
    }

    // $ANTLR end "record"

    public static class set_document_return extends ParserRuleReturnScope {
        Object tree;

        @Override
        public Object getTree() {
            return tree;
        }
    }

    // $ANTLR start "set_document"
    // BELScript.g:52:1: set_document : ( 'SET' DOCUMENT_KEYWORD ) document_property '=' ( OBJECT_IDENT |vl= VALUE_LIST | quoted_value ) ;
    public final BELScriptParser.set_document_return set_document()
            throws RecognitionException {
        BELScriptParser.set_document_return retval =
                new BELScriptParser.set_document_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token vl = null;
        Token string_literal13 = null;
        Token DOCUMENT_KEYWORD14 = null;
        Token char_literal16 = null;
        Token OBJECT_IDENT17 = null;
        BELScriptParser.document_property_return document_property15 = null;

        BELScriptParser.quoted_value_return quoted_value18 = null;

        Object vl_tree = null;
        Object string_literal13_tree = null;
        Object DOCUMENT_KEYWORD14_tree = null;
        Object char_literal16_tree = null;
        Object OBJECT_IDENT17_tree = null;

        paraphrases.push("in set document.");
        try {
            // BELScript.g:55:5: ( ( 'SET' DOCUMENT_KEYWORD ) document_property '=' ( OBJECT_IDENT |vl= VALUE_LIST | quoted_value ) )
            // BELScript.g:56:5: ( 'SET' DOCUMENT_KEYWORD ) document_property '=' ( OBJECT_IDENT |vl= VALUE_LIST | quoted_value )
            {
                root_0 =  adaptor.nil();

                // BELScript.g:56:5: ( 'SET' DOCUMENT_KEYWORD )
                // BELScript.g:56:6: 'SET' DOCUMENT_KEYWORD
                {
                    string_literal13 =
                            (Token) match(input, 47,
                                    FOLLOW_47_in_set_document160);
                    string_literal13_tree =
                             adaptor.create(string_literal13);
                    adaptor.addChild(root_0, string_literal13_tree);
